--- a/Codes - ipynb - Chuxin Liu.ipynb
+++ b/Codes - ipynb - Chuxin Liu.ipynb
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(\"Data Science ZExercise_TRAINING_CONFIDENTIAL1.csv\")\n",
-    "df_test = pd.read_csv(\"Data Science ZExercise_TEST_CONFIDENTIAL2.csv\")"
+    "df_train = pd.read_csv(\"T.csv\")\n",
+    "df_test = pd.read_csv(\"C.csv\")"
    ]
   },
   {
